--- a/index.html
+++ b/index.html
@@ -296,9 +296,9 @@
 
       <div class="details">
         <h1>GLADYS LACIA</h1>
-
+        <!-- left it "naked" so there would be as little editing needed as possible -->
         <div id="details">
-          <p>Freelancer &mdash; SEO Content Writer / Virtual Assistant / Sales Data Analyst / Teacher</p>
+          <p>Freelancer &mdash; SEO Content Writer / Virtual Assistant / Sales Data Analyst</p>
           <p>onbizgladyslacia@gmail.com</p>
           <p>Upwork: 01496f55ce7a5e12b1</p>
           <p>OLJ: 3977015 (OnlineJobs.ph)</p>
