--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
           <p>&#128188; Freelancer &mdash; SEO Content Writer / Virtual Assistant / Sales Data Analyst</p>
           <p>&#128231; onbizgladyslacia@gmail.com</p>
           <p>&#128187; Upwork: 01496f55ce7a5e12b1</p>
-          <p>&#128187; OLJ: 3977015 (OnlineJobs.ph)</p>
+          <p>&#128187; OnlineJobs.ph: 3977015</p>
         </div>
       </div>
     </div>
