--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       -webkit-font-smoothing: antialiased;
       -moz-osx-font-smoothing: grayscale;
       font-optical-sizing: auto; 
-      letter-spacing: 0;
+      letter-spacing: 1px;
     }
 
     html, body {
@@ -80,6 +80,7 @@
     h2 {
       font-size: var(--h2);
       font-weight: 700;
+      letter-spacing: 1px;
       margin-top: 18px;
       margin-bottom: 6px;
       font-variation-settings: "wght" 700, "opsz" 18;
@@ -89,6 +90,7 @@
     h3 {
       font-size: var(--h3);
       font-weight: 700;
+      letter-spacing: 1px;
       margin-top: 12px;
       margin-bottom: 4px;
       font-variation-settings: "wght" 700, "opsz" 16;
@@ -188,6 +190,7 @@
     .details h1 {
       font-size: var(--h1);
       font-weight: 700;
+      letter-spacing: 1px;
       margin-bottom: 6px;
       font-variation-settings: "wght" 700, "opsz" 24;
     }
@@ -195,19 +198,21 @@
     #details p {
     margin: 0 !important;
     padding: 0 !important;
-    line-height: 1 !important;
+    line-height: 1.5 !important;
+    letter-spacing: 1px;
     }
 
     #resume p {
     margin: 0 !important;
     padding: 0 !important;
     line-height: 1 !important;
+    letter-spacing: 1px;
     }
 
     #home p {
     margin: 0 !important;
     padding: 0 !important;
-    line-height: 1 !important;
+    line-height: 1.5 !important;
     }
 
     .niche-heading {
