--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
 
     .footer-contact p {
       color: var(--primary);
+      letter-spacing: 1px;
     }
 
     .menu-btn, .niche-btn {
@@ -213,6 +214,7 @@
     margin: 0 !important;
     padding: 0 !important;
     line-height: 1.5 !important;
+    letter-spacing: 1px;
     }
 
     .niche-heading {
