--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Gladys Lacia | Freelance SEO, Operations & Sales Support</title>
+  <title>Gladys Lacia | SEO Content Writer, General VA & Operations, and Sales Data Analyst</title>
 
   <!-- Favicon -->
   <link rel="icon" href="./assets/favicon1gdlcgithubio.png" />
