--- a/index.html
+++ b/index.html
@@ -1,1 +1,113 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+  <title>Gladys Lacia &ndash; Virtual Assistant&colon; Content Writer, Social Media Marketing, Project Management</title>
+  <meta
+  name="description"
+  content="Gladys Lacia is a detail-oriented Virtual Assistant providing reliable administrative, operational, and content support for entrepreneurs and small teams."
+    />
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="./assets/gdlcfavicon1.png" />
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Lato:wght@400;700&display=swap" rel="stylesheet">
+
+  <!-- Styles -->
+  <link rel="stylesheet" href="./assets/style.css" />
+</head>
+<body>
+
+  <main class="document">
+
+    <header class="header">
+      <img
+        src="./assets/gdlcprofilepicture1.jpg"
+        alt="Gladys Lacia profile photo"
+        class="profile-image"
+      />
+
+      <div class="header-text">
+        <h1>Gladys Lacia</h1>
+        <p class="role">Virtual Assistant&colon; Content Writer, Social Media Marketing, Project Management</p>
+      </div>
+    </header>
+
+    <section class="section">
+      <h2>Contact Information</h2>
+      <p>
+        Email:
+        <a href="mailto:gladyslacia@gmail.com" target="_blank" rel="noopener">
+          gladyslacia@gmail.com
+        </a>
+      </p>
+      <p>
+        LinkedIn:
+        <a href="https://www.linkedin.com" target="_blank" rel="noopener">
+          linkedin.com/in/gladyslacia
+        </a>
+      </p>
+      <p>
+        Location: Philippines
+      </p>
+    </section>
+
+    <section class="section">
+      <h2>Professional Summary</h2>
+      <p>
+        Detail oriented and dependable Virtual Assistant with experience supporting
+        entrepreneurs and small teams through reliable operations, clear communication,
+        and consistent follow through. Skilled in administrative support, content
+        coordination, and systems organization with a strong focus on accuracy,
+        accountability, and long term support.
+      </p>
+    </section>
+
+    <section class="section">
+      <h2>Work Experience</h2>
+      <p>
+        Full work history, responsibilities, and accomplishments are detailed in my
+        resume.
+      </p>
+      <p>
+        <a
+          href="https://gladyslacia.github.io/assets/Gladys-Lacia-VA-Resume-Updated022026.pdf"
+          target="_blank"
+          rel="noopener"
+        >
+          View or download resume (PDF)
+        </a>
+      </p>
+    </section>
+
+    <section class="section">
+      <h2>Expertise, Skills, and Tools</h2>
+
+      <h3>Technical Skills</h3>
+      <ul>
+        <li>Email and calendar management</li>
+        <li>Data entry and document formatting</li>
+        <li>Task tracking and reporting</li>
+        <li>Content scheduling and coordination</li>
+        <li>Basic website updates</li>
+      </ul>
+
+      <h3>Tools</h3>
+      <p>
+        Google Workspace, ClickFunnels, ConvertKit, Canva, Trello, Facebook,
+        QuickBooks
+      </p>
+    </section>
+
+    <footer class="footer">
+      <p>© 2026 Gladys Lacia</p>
+    </footer>
+
+  </main>
+
+  <script src="./assets/function.js"></script>
+</body>
+</html>
