--- a/index.html
+++ b/index.html
@@ -38,31 +38,37 @@
 
     <section class="section">
       <h2>Contact Information</h2>
-      <p>
-        Email:
-        <a href="mailto:gladyslacia@gmail.com" target="_blank" rel="noopener">
-          gladyslacia@gmail.com
-        </a>
-      </p>
-      <p>
-        LinkedIn:
-        <a href="https://www.linkedin.com" target="_blank" rel="noopener">
-          linkedin.com/in/gladyslacia
-        </a>
-      </p>
-      <p>
-        Location: Philippines
-      </p>
+      <p>&#128241; WhatsApp&colon; <a href='https://wa.me/639124619473' target='_blank'>+63-912-461-9473</a><br>
+      &#128231; Email&colon; <a href='mailto:onbizgladyslacia@gmail.com' target='_blank'>onbizgladyslacia@gmail.com</a><br>
+      &#128187; Upwork&colon; <a href='https://www.upwork.com/freelancers/~01496f55ce7a5e12b1' target='_blank'>01496f55ce7a5e12b1</a><br>
+      &#128187; OnlineJobs.ph&colon; <a href='https://www.onlinejobs.ph/jobseekers/info/3977015' target='_blank'>3977015</a><br>
+      &#128100; LinkedIn&colon; <a href='https://www.linkedin.com/in/freelancergladyslacia' target='_blank'>freelancergladyslacia</a><br>
+      &#128172; Facebook&colon; <a href='https://www.facebook.com/onbizgladyslacia' target='_blank'>onbizgladyslacia</a><br>
+      &#128236; <a href='https://www.google.com/maps?q=8.5608125,123.6474219' target='_blank'>HJ6W+8XF</a> Calamba, Misamis Occidental, Philippines</p>
     </section>
 
     <section class="section">
       <h2>Professional Summary</h2>
       <p>
-        Detail oriented and dependable Virtual Assistant with experience supporting
-        entrepreneurs and small teams through reliable operations, clear communication,
-        and consistent follow through. Skilled in administrative support, content
-        coordination, and systems organization with a strong focus on accuracy,
-        accountability, and long term support.
+        Detail-oriented Virtual Assistant with hands-on experience supporting a faith-based educational business during its early growth stage. This role marked my early virtual assistant experience, with responsibilities evolving organically over time based on trust, initiative, and demonstrated capability.
+      </p>
+      <p>
+        My work primarily supported content creation, community engagement, research, documentation, and workflow organization. I consistently contributed through proactive communication, structured planning, and creative problem-solving, while learning real-world VA systems in a live business environment. My strongest contributions occurred in roles requiring content support, research, documentation, and collaborative planning, rather than high-volume administrative enforcement.
+      </p>
+      <h3>Strongest VA Role Alignment (evidence-based):</h3>
+      <ul>
+        <li>Content & Editorial Virtual Assistant</li>
+        <li>Research & Ideation Support VA</li>
+        <li>Community Management & Engagement VA</li>
+        <li>Documentation & Workflow Support VA</li>
+      </ul>
+      <h3>Lower alignment (based on past challenges):</h3>
+      <ul>
+        <li>High-precision administrative enforcement roles (e.g., calendar policing, daily visibility tracking)</li>
+        <li>Backend operations roles requiring constant system compliance without creative or contextual work</li>
+      </ul>
+      <p>
+        These roles align with demonstrated strengths in writing, organizing information, creating templates, researching trends, and supporting strategic thinking. Strongest performance occurs when work involves clear deliverables, creative contribution, research, and shared accountability. Greater friction occurs when responsibilities require sustained administrative oversight across multiple systems simultaneously.
       </p>
     </section>
 
