--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       &#128187; Upwork&colon; <a href='https://www.upwork.com/freelancers/~01496f55ce7a5e12b1' target='_blank'>01496f55ce7a5e12b1</a><br>
       &#128187; OnlineJobs.ph&colon; <a href='https://www.onlinejobs.ph/jobseekers/info/3977015' target='_blank'>3977015</a><br>
       &#128100; LinkedIn&colon; <a href='https://www.linkedin.com/in/freelancergladyslacia' target='_blank'>freelancergladyslacia</a><br>
-      &#128172; Facebook&colon; <a href='https://www.facebook.com/onbizgladyslacia' target='_blank'>onbizgladyslacia</a><br>
+      &#128172; Facebook&colon; <a href='https://www.facebook.com/onbizgladyslacia' target='_blank'>@onbizgladyslacia</a><br>
       &#128236; <a href='https://www.google.com/maps?q=8.5608125,123.6474219' target='_blank'>HJ6W+8XF</a> Calamba, Misamis Occidental, Philippines</p>
     </section>
 
