--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
       </p>
       <h3>Strongest VA Role Alignment (evidence-based):</h3>
       <ul>
-        <li>Content & Editorial Virtual Assistant</li>
-        <li>Research & Ideation Support VA</li>
-        <li>Community Management & Engagement VA</li>
-        <li>Documentation & Workflow Support VA</li>
+        <li>Content &amp; Editorial Virtual Assistant</li>
+        <li>Research &amp; Ideation Support VA</li>
+        <li>Community Management &amp; Engagement VA</li>
+        <li>Documentation &amp; Workflow Support VA</li>
       </ul>
       <h3>Lower alignment (based on past challenges):</h3>
       <ul>
