--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <title>Gladys Lacia &ndash; Virtual Assistant&colon; Content Writer, Social Media Marketing, Project Management</title>
   <meta
   name="description"
-  content="Gladys Lacia is a detail-oriented Virtual Assistant providing reliable administrative, operational, and content support for entrepreneurs and small teams."
+  content="Gladys Lacia &ndash; Virtual Assistant&colon; Content Writer, Social Media Marketing, Project Management &colon; Content & Editorial VA, Research & Ideation Support VA, Community Management &
+Engagement VA, and Documentation & Workflow Support VA"
     />
 
   <!-- Favicon -->
@@ -78,7 +79,7 @@
         Full work history, responsibilities, and accomplishments are detailed in my
         resume.
       </p>
-      <p>
+      <p> &#128073;
         <a
           href="https://gladyslacia.github.io/assets/Gladys-Lacia-VA-Resume-Updated022026.pdf"
           target="_blank"
@@ -92,24 +93,97 @@
     <section class="section">
       <h2>Expertise, Skills, and Tools</h2>
 
-      <h3>Technical Skills</h3>
-      <ul>
-        <li>Email and calendar management</li>
-        <li>Data entry and document formatting</li>
-        <li>Task tracking and reporting</li>
-        <li>Content scheduling and coordination</li>
-        <li>Basic website updates</li>
-      </ul>
+      <ol>
+        <li>
+          <h3>Content Creation & Editorial Support</h3>
+          <ul>
+            <li>Blog drafting and editing</li>
+            <li>Caption writing and post preparation</li>
+            <li>Content organization for courses and resources</li>
+            <li><em>Tools:</em>
+              <p>Google Docs, Canva, Microsoft Word, Notion</p>
+            </li>
+          </ul>
+        </li>
 
-      <h3>Tools</h3>
-      <p>
-        Google Workspace, ClickFunnels, ConvertKit, Canva, Trello, Facebook,
-        QuickBooks
-      </p>
+        <li>
+          <h3>Social Media & Community Support</h3>
+          <ul>
+            <li>Facebook page and group content support</li>
+            <li>Community engagement and moderation assistance</li>
+            <li>Post planning and content rhythm support</li>
+            <li><em>Tools:</em>
+              <p>Facebook Pages, Facebook Groups, Meta Business Suite, Buffer</p>
+            </li>
+          </ul>
+        </li>
+
+        <li>
+          <h3>Research & Trend Analysis</h3>
+          <ul>
+            <li>Trend research</li>
+            <li>Topic ideation for blogs and social content</li>
+            <li>Competitor and reference brand scanning</li>
+            <li><em>Tools:</em>
+              <p>Perplexity AI, web-based research tools, Google Trends</p>
+            </li>
+          </ul>
+        </li>
+
+        <li>
+          <h3>Workflow Documentation & Planning Support</h3>
+          <ul>
+            <li>Drafting workflows, checklists, and templates</li>
+            <li>Organizing ideas, notes, and task documentation</li>
+            <li>Supporting planning discussions with written summaries</li>
+            <li><em>Tools:</em>
+              <p>Google Docs, Google Sheets, Slack, Notion, Airtable</p>
+            </li>
+          </ul>
+        </li>
+
+        <li>
+          <h3>Scheduling & Coordination Support</h3>
+          <ul>
+            <li>Meeting scheduling and coordination</li>
+            <li>Calendar-based planning support</li>
+            <li>Agenda preparation assistance</li>
+            <li><em>Tools:</em>
+              <p>Google Calendar, Calendly, Zoom Scheduler</p>
+            </li>
+          </ul>
+        </li>
+
+        <li>
+          <h3>Time Tracking & Reporting</h3>
+          <ul>
+            <li>Logging work hours</li>
+            <li>Task and output tracking</li>
+            <li>Reporting activity summaries</li>
+            <li><em>Tools:</em>
+              <p>TimeProof, Hubstaff, Clockify</p>
+            </li>
+          </ul>
+        </li>
+
+        <li>
+          <h3>Communication & Collaboration</h3>
+          <ul>
+            <li>Clear written status updates</li>
+            <li>Proactive clarification and follow-ups</li>
+            <li>Collaborative planning and feedback handling</li>
+            <li><em>Tools:</em>
+              <p>WhatsApp, Slack, Email, Microsoft Teams</p>
+            </li>
+          </ul>
+        </li>
+      </ol>
+
     </section>
 
     <footer class="footer">
-      <p>© 2026 Gladys Lacia</p>
+      <p>© 2026 Gladys Lacia &mdash; Content & Editorial VA, Research & Ideation Support VA, Community Management &
+Engagement VA, and Documentation & Workflow Support VA</p>
     </footer>
 
   </main>
