--- a/index.html
+++ b/index.html
@@ -94,8 +94,7 @@ Engagement VA, and Documentation & Workflow Support VA"
       <h2>Expertise, Skills, and Tools</h2>
 
       <ol>
-        <li>
-          <h3>Content Creation & Editorial Support</h3>
+        <h3><li>Content Creation & Editorial Support</li></h3>
           <ul>
             <li>Blog drafting and editing</li>
             <li>Caption writing and post preparation</li>
@@ -104,10 +103,8 @@ Engagement VA, and Documentation & Workflow Support VA"
               <p>Google Docs, Canva, Microsoft Word, Notion</p>
             </li>
           </ul>
-        </li>
 
-        <li>
-          <h3>Social Media & Community Support</h3>
+        <h3><li>Social Media & Community Support</li></h3>
           <ul>
             <li>Facebook page and group content support</li>
             <li>Community engagement and moderation assistance</li>
@@ -116,10 +113,8 @@ Engagement VA, and Documentation & Workflow Support VA"
               <p>Facebook Pages, Facebook Groups, Meta Business Suite, Buffer</p>
             </li>
           </ul>
-        </li>
 
-        <li>
-          <h3>Research & Trend Analysis</h3>
+        <h3><li>Research & Trend Analysis</li></h3>
           <ul>
             <li>Trend research</li>
             <li>Topic ideation for blogs and social content</li>
@@ -128,10 +123,8 @@ Engagement VA, and Documentation & Workflow Support VA"
               <p>Perplexity AI, web-based research tools, Google Trends</p>
             </li>
           </ul>
-        </li>
 
-        <li>
-          <h3>Workflow Documentation & Planning Support</h3>
+        <h3><li>Workflow Documentation & Planning Support</li></h3>
           <ul>
             <li>Drafting workflows, checklists, and templates</li>
             <li>Organizing ideas, notes, and task documentation</li>
@@ -140,10 +133,8 @@ Engagement VA, and Documentation & Workflow Support VA"
               <p>Google Docs, Google Sheets, Slack, Notion, Airtable</p>
             </li>
           </ul>
-        </li>
 
-        <li>
-          <h3>Scheduling & Coordination Support</h3>
+        <h3><li>Scheduling & Coordination Support</li></h3>
           <ul>
             <li>Meeting scheduling and coordination</li>
             <li>Calendar-based planning support</li>
@@ -152,10 +143,8 @@ Engagement VA, and Documentation & Workflow Support VA"
               <p>Google Calendar, Calendly, Zoom Scheduler</p>
             </li>
           </ul>
-        </li>
 
-        <li>
-          <h3>Time Tracking & Reporting</h3>
+        <h3><li>Time Tracking & Reporting</li></h3>
           <ul>
             <li>Logging work hours</li>
             <li>Task and output tracking</li>
@@ -164,10 +153,8 @@ Engagement VA, and Documentation & Workflow Support VA"
               <p>TimeProof, Hubstaff, Clockify</p>
             </li>
           </ul>
-        </li>
 
-        <li>
-          <h3>Communication & Collaboration</h3>
+        <h3><li>Communication & Collaboration</li></h3>
           <ul>
             <li>Clear written status updates</li>
             <li>Proactive clarification and follow-ups</li>
@@ -176,7 +163,6 @@ Engagement VA, and Documentation & Workflow Support VA"
               <p>WhatsApp, Slack, Email, Microsoft Teams</p>
             </li>
           </ul>
-        </li>
       </ol>
 
     </section>
