--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ Engagement VA, and Documentation & Workflow Support VA"
     </section>
 
     <section class="section">
-      <h2>Work Experience</h2>
+      <h2>Work Experience &amp; Portfolio</h2>
       <p>
         Full work history, responsibilities, and accomplishments are detailed in my
         resume.
